--- a/Frontend/PMS/src/index.css
+++ b/Frontend/PMS/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .input {
+    @apply w-full px-3 py-2 border border-gray-300 rounded-lg
+           focus:outline-none
+           focus:ring-2 focus:ring-slate-900
+           focus:border-slate-900;
+  }
+}
